[package]
name = "eos_ram"
version = "0.1.0"
authors = ["Denis <denis@pinax.network>"]
description = "EOS RAM substreams"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
substreams-antelope = "0.4"

[dependencies]
substreams = "0.5"
substreams-antelope = "0.4"
prost = "0.11"
prost-types = "0.11"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.3.0"
antelope = "0.2"